<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoogleMap</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_hospital_list">HospitalListActivity</string>
    <string name="title_activity_insert_hostpital_info">InsertHostpitalInfoActivity</string>
    <string name="title_activity_single_hospital_view">SingleHospitalViewActivity</string>
    <string name="name">Hospital Name</string>
    <string name="address">Hospital Address</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longitude</string>
    <string name="description">Description</string>
    <string name="Insert">Insert</string>
    <string name="hospitalName">Hospital Name</string>
    <string name="hospitallAddress">Hospital Address</string>
    <string name="hosdescription">Description</string>
    <string name="top">Ten Top Hospital In Dhaka</string>

</resources>
